<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/Value1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/txt_value1"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Value2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/txt_value2"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Value1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="338dp"
        android:layout_height="220dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Value2">

        <RadioButton
            android:id="@+id/rb_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rb_add"
            android:text="@string/rb_add"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_subtract"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_subtract"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_multiply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_multiply"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb_divide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb_divide"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_result"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="4dp"
        android:onClick="Calculate"
        android:text="@string/btn"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
</androidx.constraintlayout.widget.ConstraintLayout>